test/tests/errors/error-rhv-while.sm
// true
// false
/**/
/**/

program {
    proc x(y) {
        output y;
    }
    while (x) {
    }
}